# CMake-and-GoogleTest

./: .gitignore  CMakeLists.txt  Example.hpp  README.md
src/: CMakeLists.txt  Example.cpp  main.cpp
tests/: CMakeLists.txt  ExampleTests.cpp
